fixed bugs in models and implemented code sending to email with copilot

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # DATABASE CONFIGURATION
-POSTGRES_DB=instgram_dbf
+POSTGRES_DB=instagram_dbf
 POSTGRES_PASSWORD=easypassword  
 POSTGRES_USER=admin
 PORT=5432
 HOST=localhost
 
 # SMTP CONFIGURATION
-MAIL_USERNAME=abdukodirarifzanov@gmail.com,
-MAIL_PASSWORD=yourpassword,
+MAIL_USERNAME=abdukodirarifzanov@gmail.com
+MAIL_PASSWORD=pawiuzunsiwrnjro
 MAIL_FROM=abdukodirarifzanov@gmail.com
